# Opxel

./: .clang-format  .gitignore  CMakeLists.txt  Opxel.sln  README.md
Opxel/: FlyingCamera.cs  Opxel.csproj  OpxelGame.cs  Program.cs
Opxel/Application/: FlyingCamera.cs  OpxelInstance.cs  OpxelPlayer.cs  Program.cs  WorldDataLoader.cs
Opxel/AssetParsing/: MD2Parser.cs  ParsingHelper.cs
Opxel/Content/: Asset.cs  AssetManager.cs  IAssetLoadable.cs  ImageLoader.cs  StaticPreLoadAttribute.cs
Opxel/Debugging/: Debugger.cs
Opxel/Generation/: Noise2D.cs  WorldGenerator.cs
Opxel/Graphics/: Camera.cs  ChunkMesh.cs  ChunkVertex.cs  GraphicBuffer.cs  Mesh.cs  OpenGLParameter.cs  PixelTexture.cs  Shader.cs  ShaderFileParser.cs  ShaderProgram.cs  Texture2D.cs  UniformBuffer.cs  VertexArray.cs  VertexAttribute.cs  VoxelMesh.cs
Opxel/Input/: OpxelInput.cs
Opxel/Mathematics/: Transform.cs
Opxel/Voxels/: BlockPalette.cs  BlockProperty.cs  BlockTags.cs  BlockVertex.cs  Chunk.cs  ChunkBlockData.cs  ChunkLayer.cs  ChunkManager.cs  ChunkMesh.cs  ChunkMeshBuilder.cs  ChunkVertex.cs  OpxelWorld.cs  WorldDataLoader.cs
Opxel/World/: BlockSystem.cs  Chunk.cs  ChunkData.cs  ChunkLayer.cs  ChunkManager.cs  ChunkMesh.cs  ChunkMeshBuilder.cs  OpxelWorld.cs
src/: logger.cpp  logger.hpp  main.cpp
src/graphics/: debugMessenger.cpp  debugMessenger.hpp  enumToString.cpp  instance.cpp  instance.hpp  physicalDevice.hpp  physicalDeviceInfo.cpp  physicalDeviceInfo.hpp  physicalDevicePicker.cpp  physicalDevicePicker.hpp  plan.md  renderer.cpp  renderer.hpp  (+5 more)
tools/: StartTmux.sh
(+5 files in other folders)
